--- a/src/main/resources/com/daniel/libros/UI/main.fxml
+++ b/src/main/resources/com/daniel/libros/UI/main.fxml
@@ -8,33 +8,31 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="730.0"
-      prefWidth="1054.0"
-      xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.daniel.controller.mainController">
-   <ListView fx:id="listLibros" layoutX="682.0" layoutY="95.0" prefHeight="606.0" prefWidth="344.0"/>
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="730.0" prefWidth="1054.0"
+      xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.daniel.controller.mainController">
+   <ListView fx:id="listLibros" layoutX="682.0" layoutY="95.0" prefHeight="606.0" prefWidth="344.0" />
    <Label layoutX="791.0" layoutY="37.0" text="Lista de Libros">
       <font>
-         <Font size="20.0"/>
+         <Font size="20.0" />
       </font>
    </Label>
    <Label layoutX="305.0" layoutY="37.0" text="Datos">
       <font>
-         <Font size="20.0"/>
+         <Font size="20.0" />
       </font>
    </Label>
-   <Label layoutX="125.0" layoutY="123.0" text="Nombre"/>
-   <Label layoutX="132.0" layoutY="193.0" text="Autor"/>
-   <Label layoutX="127.0" layoutY="263.0" text="Genero"/>
-   <Label layoutX="123.0" layoutY="337.0" text="Estado"/>
-   <Label layoutX="111.0" layoutY="403.0" text="Puntuacion"/>
-   <Label layoutX="110.0" layoutY="488.0" text="Descripcion"/>
+   <Label layoutX="125.0" layoutY="123.0" text="Nombre" />
+   <Label layoutX="132.0" layoutY="193.0" text="Autor" />
+   <Label layoutX="127.0" layoutY="263.0" text="Genero" />
+   <Label layoutX="123.0" layoutY="337.0" text="Estado" />
+   <Label layoutX="111.0" layoutY="403.0" text="Puntuacion" />
+   <Label layoutX="110.0" layoutY="488.0" text="Descripcion" />
 
-   <TextField fx:id="textNombre" layoutX="222.0" layoutY="119.0"/>
-   <TextField fx:id="textAutor" layoutX="222.0" layoutY="189.0"/>
-   <TextField fx:id="textPuntuacion" layoutX="232.0" layoutY="399.0" prefHeight="25.0" prefWidth="80.0"/>
-   <TextField fx:id="textDescripcion" layoutX="222.0" layoutY="484.0" prefHeight="84.0" prefWidth="382.0"/>
-   <ComboBox fx:id="comboEstados" layoutX="221.0" layoutY="333.0" prefWidth="150.0" promptText="Estado"/>
-   <Button layoutX="222.0" layoutY="268.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="149.0"
-           text="Ver Generos" onAction="#AbrirGeneros"/>
+   <TextField fx:id="textNombre" layoutX="222.0" layoutY="119.0" />
+   <TextField fx:id="textAutor" layoutX="222.0" layoutY="189.0" />
+   <TextField fx:id="textPuntuacion" layoutX="232.0" layoutY="399.0" prefHeight="25.0" prefWidth="80.0" />
+   <TextField fx:id="textDescripcion" layoutX="222.0" layoutY="484.0" prefHeight="84.0" prefWidth="382.0" />
+   <ComboBox fx:id="comboEstados" layoutX="221.0" layoutY="333.0" prefWidth="150.0" promptText="Estado" />
+   <Button layoutX="222.0" layoutY="268.0" mnemonicParsing="false" onAction="#AbrirGeneros" prefHeight="25.0" prefWidth="149.0" text="Ver Generos" />
+   <Button layoutX="115.0" layoutY="637.0" mnemonicParsing="false" text="Añadir libro" onAction="#crearLibro"/>
 </Pane>
