--- a/src/main/resources/com/daniel/libros/UI/main.fxml
+++ b/src/main/resources/com/daniel/libros/UI/main.fxml
@@ -35,4 +35,6 @@
    <ComboBox fx:id="comboEstados" layoutX="221.0" layoutY="333.0" prefWidth="150.0" promptText="Estado" />
    <Button layoutX="222.0" layoutY="268.0" mnemonicParsing="false" onAction="#AbrirGeneros" prefHeight="25.0" prefWidth="149.0" text="Ver Generos" />
    <Button layoutX="115.0" layoutY="637.0" mnemonicParsing="false" text="Añadir libro" onAction="#crearLibro"/>
+   <Button layoutX="222.0" layoutY="637.0" mnemonicParsing="false" text="Borrar libro" onAction="#borrarLibro"/>
+   <Button layoutX="329.0" layoutY="637.0" mnemonicParsing="false" text="Modificar libro" onAction="#modificarLibro"/>
 </Pane>
